bk_ida/gobmkida/g0/set_depth_values
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/set_depth_values/src/engine/utils.c:1167:25: error: use of undeclared identifier 'node_limits_0'
owl_node_limit = 1000 * node_limits_0[10 - level] / node_limits_0[0]; 
                        ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/set_depth_values/src/engine/utils.c:1167:53: error: use of undeclared identifier 'node_limits_0'
owl_node_limit = 1000 * node_limits_0[10 - level] / node_limits_0[0]; 
                                                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/set_depth_values/src/obj/1/utils.o] Error 1
